Fixes vertical scrolling of summary item cards
* Adding multiple card items to the dataservice or connection summary
  pages causes them to overflow off the bottom of the window. Worse still,
  the page body automatically displays a vertical scrollbar which, when
  scrolled, caused unsightly behaviour as components overlay the navbar.

* Rather than the body scrolling, control the height of the item cards
  parent div so the scrollbar does not appear. Then allow the parent div
  to display the scrollbar instead.

--- a/src/main/ngapp/src/app/activities/activities.component.css
+++ b/src/main/ngapp/src/app/activities/activities.component.css
@@ -11,7 +11,9 @@
 }
 
 .activity-list-items {
-  margin-top: 10px
+  margin-top: 10px;
+  height: 75vh;
+  overflow-y: auto;
 }
 
 .activity-list-activities .toolbar-pf {
