--- a/src/main/ngapp/src/app/connections/connections.component.css
+++ b/src/main/ngapp/src/app/connections/connections.component.css
@@ -11,7 +11,9 @@
 }
 
 .connection-list-items {
-  margin-top: 10px
+  margin-top: 10px;
+  height: 75vh;
+  overflow-y: auto;
 }
 
 .connection-list-connections .toolbar-pf {
